--- a/src/main/resources/templates/fragments/beforeHeader.html
+++ b/src/main/resources/templates/fragments/beforeHeader.html
@@ -35,7 +35,7 @@
           </li>
           <!-- 하마찾기 -->
           <li>
-            <a href="#">하마찾기</a>
+            <a href="" th:href="@{/hamafind}">하마찾기</a>
           </li>
         </ul>
       </div>
@@ -54,7 +54,7 @@
               <li><a href="#">회원정보수정</a></li>
               <li><a href="#">회원탈퇴</a></li>
               <li><p>하마전용</p></li>
-              <li><a href="#">포트폴리오</a></li>
+              <li><a href="" th:href="@{/portfolio}">포트폴리오</a></li>
             </ul>
           </li></div>
 
