--- a/src/main/resources/templates/webPage/Login/signup.html
+++ b/src/main/resources/templates/webPage/Login/signup.html
@@ -6,6 +6,11 @@
 <th:block layout:fragment="css">
   <link rel="stylesheet" th:href="@{/css/signup.css}">
 </th:block>
+<style>
+  .field-error {
+    color : red;
+  }
+</style>
 
 <div layout:fragment="content">
 <body>
@@ -29,31 +34,67 @@
       <div></div>
       <div class="form password_1">
         <h4>비밀번호</h4>
-        <input class="txt txt_pw1" type="password" placeholder=" 6~20자 이하로 입력하세요." name="passwd" th:field="*{passwd}">
+        <input class="txt txt_pw1" type="password" placeholder=" 6~20자 이하로 입력하세요." id="passwd" name="passwd" th:field="*{passwd}">
         <span class="field-error" th:if="${#fields.hasErrors('passwd')}" th:errors="*{passwd}"></span>
       </div>
       <div></div>
       <div class="form password_2">
         <h4>비밀번호 확인</h4>
-        <input class="txt txt_pw2" type="password" placeholder=" 비밀번호를 재입력하세요.">
+        <input class="txt txt_pw2" type="password" placeholder=" 비밀번호를 재입력하세요." id="passwdck"  name="passwdck">
+        <span class="field-error" th:if="${#fields.hasErrors('passwdck')}" th:errors="*{passwdck}"></span>
       </div>
       <div></div>
 
       <div class="checkbox_field">
+<!--        수미 전체동의 추가, 약관에 name추가, 하단의 js로직도 추가-->
         <div>
-          <input type="checkbox" class="checkbox">  (필수) 이용약관동의
+          <input type="checkbox" value="selectall" onclick="selectAll(this)">  전체동의
+          <span class="field-error" th:if="${#fields.hasErrors('check')}" th:errors="*{check}"></span>
         </div>
         <div>
-          <input type="checkbox" class="checkbox">  (필수) 개인정보 수집 및 이용 동의
+          <input type="checkbox" class="checkbox1" name="terms" th:field="*{terms}">  (필수) 이용약관동의
         </div>
         <div>
-          <input type="checkbox" class="checkbox">  (필수) 만 14세 이상입니다
+          <input type="checkbox" class="checkbox2" name="privacy" th:field="*{privacy}">  (필수) 개인정보 수집 및 이용 동의
+        </div>
+        <div>
+          <input type="checkbox" class="checkbox3" name="age" th:field="*{age}">  (필수) 만 14세 이상입니다
         </div>
       </div>
       <input class="sign_btn_submit" type="submit" value="회원가입">
     </form>
   </div>
 </div>
+
+<script>
+  function selectAll(selectAll)  {
+    const checkboxes
+       = document.querySelectorAll('input[type="checkbox"]');
+
+    checkboxes.forEach((checkbox) => {
+      checkbox.checked = selectAll.checked
+    })
+  }
+
+<!--  function validateForm() {-->
+<!--    var checkboxes = document.querySelectorAll('.checkbox');-->
+<!--    var isChecked = Array.from(checkboxes).some(function (checkbox) {-->
+<!--        return checkbox.checked;-->
+<!--    });-->
+
+<!--    if (!isChecked) {-->
+<!--        // 하나 이상의 체크박스가 선택되지 않은 경우-->
+<!--        var errorSpan = document.querySelector('.field-error');-->
+<!--        errorSpan.textContent = '적어도 하나의 항목을 선택하세요.';-->
+<!--        return false; // 폼 제출을 막음-->
+<!--    }-->
+
+<!--    // 여기에 필요한 다른 유효성 검사 로직을 추가할 수 있습니다.-->
+
+<!--    return true; // 폼 제출 허용-->
+<!--  }-->
+
+</script>
   </body>
   </div>
   </html>
